apps/shared/immich/httproute-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-public
  namespace: immich
  labels:
    homelab.wahoo.li/exposure: public
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  hostnames:
  - "immich.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: immich-server
      port: 2283
    timeouts:
      request: 0s
